# RainN0Coding

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.monitoring.yml  findings.md  mysql-init.sql  otel-collector-config.yml  pom.xml  progress.md  prometheus.yml  pyproject.toml  task_plan.md  tempo.yaml
python-agent/: .env.example  CODEBUDDY.md  config.py  intent_tree.py  llm_factory.py  monitoring.py  pyproject.toml  tracing.py
python-agent/agent_eval/: README.md  __init__.py  adapters.py  contracts.py  dataset.py  evaluator.py  reporting.py  runner.py
python-agent/agents/: agent_logging.py  architect_agent.py  builder_agent.py  coder_agent.py  image_collector_agent.py  intent_agent.py  mode_detector.py  pm_agent.py  reviewer_agent.py  supervisor_agent.py
python-agent/core/: circuit_breaker.py  model_registry.py  model_router.py
python-agent/guardrails/: __init__.py  audit.py  engine.py  models.py  output_guard.py  policy.py  prompt_guard.py  tool_guard.py
python-agent/memory/: conversation_memory.py
python-agent/rag/: code_grep.py  embedding_service.py  feedback_tracker.py  hybrid_engine.py  milvus_client.py  rag_builder.py  rag_cache.py  ragas_evaluator.py  retrieval_engine.py  seed_chunking.py  seed_data.py  seed_milvus.py  semantic_engine.py  sqlite_store.py
python-agent/server/: codegen_type_router.py  generate_code_orchestrator.py  lifespan.py  main.py  middleware.py  routes.py
python-agent/state/: code_gen_state.py
python-agent/tests/: conftest.py  test_agent_eval_dataset.py  test_agent_eval_evaluator.py  test_agent_eval_runner.py  (+28 more)
(+584 files in other folders)
