[project]
name = "python-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "milvus-lite>=3.0",
    "onnxruntime>=1.26.0",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-sdk>=1.42.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.0",
    "prometheus-client>=0.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.4",
    "pymilvus>=2.4",
    "pytest>=8.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "ragas>=0.2.0",
    "datasets>=3.0",
    "sentence-transformers>=5.5.1",
    "sse-starlette>=3.4.4",
    "torch==2.5.1",
    "uvicorn[standard]>=0.47.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
link-mode = "copy"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
markers = [
    "unit: deterministic pure-python checks",
    "integration: runtime boundary checks inside python-agent",
    "harness: focused production-hardening verification suites",
]
